[package]
name = "party-run"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A command execution automator"
repository = "https://github.com/iamroot99/party-run"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
colored = "2"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tokio = { version = "1", features = ["full"] }
