[package]
name = "party"
authors = ["iamroot99"]
description = "A command execution automator"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/iamroot99/party"
readme = "README.md"
version = "0.1.2"
keywords = ["cli", "automation", "development", "helper"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
colored = "2"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tokio = { version = "1", features = ["full"] }
